Fix: Overflow corregido

--- a/boda_nicole_ro/src/assets/styles/global.css
+++ b/boda_nicole_ro/src/assets/styles/global.css
@@ -17,5 +17,5 @@ p {
 
 html {
   scroll-behavior: smooth;
-  overflow: hidden;
+  overflow-x: hidden;
 }
